--- a/index.html
+++ b/index.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>My To-Do List</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="app">
-    <header>
-      <h1>✅ My Tasks</h1>
-      <button id="darkModeToggle">🌙 Dark Mode</button>
-    </header>
-
-    <div class="input-area">
-      <input type="text" id="taskInput" placeholder="What do you need to do?">
-      <button id="addTaskBtn">Add</button>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">  
+    <title>Todo List App in JavaScript</title>
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+  </head>
+  <body>
+ <button id="toggleBackgroundBtn">Dark Mode</button>
+<div class="container">
+     <div class="todo-app">
+    <h2>To-Do-List   <img src="to-do.jpeg"></h2>
+    <div class="row">
+      <input type="text" id ="input-box" placeholder ="Add your Task ...">
+      <button onclick="addTask()">Add</button>
     </div>
-
-    <div class="filters">
-      <button class="filter-btn active" data-filter="all">All</button>
-      <button class="filter-btn" data-filter="active">Active</button>
-      <button class="filter-btn" data-filter="completed">Completed</button>
-    </div>
-
-    <ul id="taskList"></ul>
-  </div>
-
-  <script src="todolist.js"></script>
-</body>
+    <ul id ="list-container">
+    </ul>
+   </div>
+</div>
+    <script src="script.js"></script>
+  </body>
 </html>
+
+
